@startuml

hide empty methods
hide empty attributes
'left to right direction
skinparam classAttributeIconSize 0

class TripThresholdController{
- company
- getVoyagesBelowThreshold()
}

class ShipTripStoreDB{
- getListVoyages()
}

class ShipStoreDB{
- getShipMaxCapacity(shipID)
- getNumContainersShipDay(shipID, someDate)
- calculateOccupancyRate(maxCapacity, capacityTime)
}

class Company{
- ShipStoreDB
- ShipTripStoreDB
- getShipStoreDB()
- getShipTripStoreDB()
}

TripThresholdController ..> Company
TripThresholdController ..> ShipTripStoreDB

Company "1" -- "1" ShipStoreDB : uses >
Company "1" -- "1" ShipTripStoreDB : uses >

@enduml